add function to add a custom avatar and showed it in profile page

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_API_KEY = "36c85a4f5dc64591b403cb7337ff0dad"
-VITE_SUPABASE_URL="https://ofjnswykgjlibpxehwlj.supabase.co"
-VITE_SUPABASE_PUBLISHABLE_DEFAULT_KEY="sb_publishable_arPe-tHrpUurBRXpU6qjFA_PHtLOTFc"
+VITE_SUPABASE_URL=https://ofjnswykgjlibpxehwlj.supabase.co
+VITE_SUPABASE_PUBLISHABLE_DEFAULT_KEY=sb_publishable_arPe-tHrpUurBRXpU6qjFA_PHtLOTFc
